<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <RelativeLayout
        android:id="@+id/relativeLay"
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:background="@drawable/fundo"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/btnSoma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="227dp"
            android:text="@string/btnMais" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/txt1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/btnSoma"
            android:layout_marginTop="89dp"
            android:text="@string/txt2"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/btnSoma"
            android:layout_marginTop="141dp"
            android:text="@string/txt3"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNum1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txt2"
            android:layout_alignEnd="@+id/edtResultado"
            android:ems="10"
            android:hint="Numero1"
            android:inputType="number"
            android:text="@string/edtNum1"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/edtNum2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txt3"
            android:layout_alignStart="@+id/edtNum1"
            android:ems="10"
            android:hint="Numero2"
            android:inputType="number"
            android:text="@string/edtNum2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btnSoma"
            android:layout_marginBottom="158dp"
            android:text="@string/txtResultado"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtResultado"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txt1"
            android:layout_below="@+id/txtResultado"
            android:layout_marginTop="-192dp"
            android:autoText="false"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:inputType="none"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMenos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edtResultado"
            android:layout_alignTop="@+id/btnSoma"
            android:text="@string/btnMenos" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btnMenos"
            android:layout_below="@+id/btnSoma"
            android:text="@string/btnMult" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btnSoma"
            android:layout_below="@+id/btnSoma"
            android:text="@string/btnDiv" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>